<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bigskysolutionsinc.boesen.englishtometric.MainActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:prompt="@string/txtConvertEnter"
        android:layout_toEndOf="@+id/nEnteredNumber"
        android:entries="@array/txtConvertList"
        android:spinnerMode="dialog"
        android:layout_alignTop="@+id/nEnteredNumber"
        android:layout_toRightOf="@+id/nEnteredNumber"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="27dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConvert"
        android:id="@+id/btnConvert"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nEnteredNumber"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="57dp"
        android:textAlignment="center"
        android:hint="@string/txtEntry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAnswer"
        android:id="@+id/sAnswer"
        android:layout_above="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:textSize="20sp" />
</RelativeLayout>
